# SpaceInvadersQT

./: .gitignore  CMakeLists.txt  README.md  Resources.qrc  SpaceInvaders.pro  setup_and_build_windows.bat
.github/workflows/: linux-build.yml  windows-build.yml
Blueprints/Enemy/: BasicEnemy.yaml
Blueprints/Movement/: Vertical.yaml
Config/: GameContext.h
Game/: AxisMovementStrategy.h  CollisionDetector.h  Game.pri  GameRunner.cpp  GameRunner.h  GameState.cpp  GameState.h  LevelManager.cpp  LevelManager.h  LinearMovement.cpp  LinearMovement.h  MovementFunction.cpp  MovementFunction.h  MovementStrategy.h
Game/Audio/: Audio.pri  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundInfo.h  SoundManager.cpp  SoundManager.h  SoundSource.cpp  SoundSource.h  SoundThread.cpp  SoundThread.h
Game/CollisionDetection/: BVHNode.cpp  BVHNode.h  BVHTree.cpp  BVHTree.h  BruteForce.h  CollisionDetection.pri  CollisionDetector.cpp  CollisionDetector.h  Quadtree.h  ThreadedCollisionDetector.h
Game/Core/: BenchmarkPromptView.cpp  BenchmarkPromptView.h  Core.pri  CustomGraphicsItem.h  GameHUD.cpp  GameHUD.h  GameRunner.cpp  GameRunner.h  GameRunnerScene.cpp  GameRunnerScene.h  GameRunnerView.cpp  GameRunnerView.h  GameState.cpp  GameState.h  HUDScene.cpp  HUDScene.h  LevelManager.cpp  LevelManager.h  LevelSelectorView.cpp  LevelSelectorView.h  MainMenuView.cpp  MainMenuView.h  MenuTextItem.cpp  MenuTextItem.h  MenuView.cpp  MenuView.h  PauseMenuView.cpp  PauseMenuView.h  TogglableMenuTextItem.cpp  TogglableMenuTextItem.h
Game/Levels/: Enemy.cpp  Enemy.h  Formation.cpp  Formation.h  Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  LevelManager.cpp  LevelManager.h  Levels.pri  SpawnEvent.cpp  SpawnEvent.h
Game/Movement/: AxisMovementStrategy.h  Movement.pri  MovementStrategy.h  MovementStrategyLoader.cpp  MovementStrategyLoader.h
GameObjects/: AnimatedGraphicsItem.h  AttractableGameObject.cpp  AttractableGameObject.h  GameObject.cpp  GameObject.h  GameObjectBlueprint.h  GameObjectBuilder.cpp  GameObjectBuilder.h  GameObjectLoader.cpp  GameObjectLoader.h  GameObjects.pri  MagneticGameObject.cpp  Position.h  PrototypeRegistry.h
GameObjects/Animations/: AnimatedItem.h  Animations.pri
GameObjects/Collectables/: Collectable.cpp  Collectable.h  Collectables.pri  Health.cpp  Health.h  Stellar.cpp  Stellar.h  StellarPool.cpp  StellarPool.h
GameObjects/Effects/: Effect.h  Effects.pri  Particle.h  ParticleSystem.cpp  ParticleSystem.h
GameObjects/Projectiles/: BasicEnemyLaser.cpp  BasicEnemyLaserBeam.cpp  BasicEnemyLaserBeam.h  EnemyLaserBeam.cpp  EnemyLaserBeam.h  EnemyLaserProjectile.cpp  EnemyLaserProjectile.h  EnemyProjectile.cpp  EnemyProjectile.h  Laser.cpp  Laser.h  LaserBeam.cpp  LaserBeam.h  PlayerLaserBeam.cpp  PlayerLaserBeam.h  PlayerLaserProjectile.cpp  PlayerLaserProjectile.h  PlayerProjectile.cpp  PlayerProjectile.h  Projectile.cpp  Projectile.h  ProjectileBuilder.cpp  ProjectileBuilder.h  Projectiles.pri  Vortex.cpp  Vortex.h  WaveOfDestruction.cpp  WaveOfDestruction.h
GameObjects/Ships/: EnemyShip.cpp  EnemyShip.h  HealthBar.cpp  HealthBar.h  PlayerShip.cpp  PlayerShip.h  Ship.cpp  Ship.h  ShipBuilder.cpp  ShipBuilder.h  ShipWithHealthBar.cpp  ShipWithHealthBar.h  Ships.pri  Shooter.cpp  Shooter.h
Graphics/: CooldownItem.h  EnergyBar.cpp  EnergyBar.h  GLBar.cpp  GLBar.h  GLCooldownItem.h  Graphics.pri  HealthBar.cpp  HealthBar.h  PixmapLibrary.h  PixmapRegistry.h  ProgressBar.cpp  ProgressBar.h  TextureRegistry.cpp  TextureRegistry.h
Graphics/Animations/: AnimatedItem.h  AnimationPlayer.h
Graphics/Effects/: Effect.h  EffectManager.cpp  EffectManager.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h
InteractiveGraphics/: InteractiveGraphics.pri
InteractiveGraphics/Animations/: AnimatedItem.h
InteractiveGraphics/Effects/: Effect.h  Effects.pri  Particle.h  ParticleSystem.cpp  ParticleSystem.h
Main/: Main.pri  main.cpp
UI/: FPSCounter.cpp  FPSCounter.h  GLProgressBar.cpp  GLProgressBar.h  GLWeaponBar.cpp  GLWeaponBar.h  GameObjectCounter.cpp  GameObjectCounter.h  IRenderable.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Panel.cpp  Panel.h  UI.pri  UISizeMode.h
Utils/: BoundsChecker.cpp  BoundsChecker.h  CustomMessageHandler.h  PerformanceBenchmark.cpp  PerformanceBenchmark.h  PerformanceMonitor.cpp  PerformanceMonitor.h  SoundEffectPool.cpp  SoundEffectPool.h  Utils.cpp  Utils.h  Utils.pri
Utils/Math/: MathConstants.h  MathFunctions.h
Weapons/: LaserCannon.cpp  LaserCannon.h  PrimaryWeapon.cpp  PrimaryWeapon.h  SecondaryWeapon.cpp  SecondaryWeapon.h  Weapon.cpp  Weapon.h  WeaponBuilder.cpp  WeaponBuilder.h  Weapons.pri
gamedata/blueprints/movement/: HorizontalAndVerticalInterval.yaml
gamedata/blueprints/projectile/: BasicEnemyProjectile.yaml
gamedata/levels/: level_0.yaml  level_1.yaml  level_2.yaml
levels/: benchmark.yaml  level_0.yaml  level_1.yaml  level_2.yaml
scripts/: clang_format_recursive.bat  setup_and_build_linux.sh  setup_and_build_macos.sh  setup_and_build_windows.bat
